--- a/registration.html
+++ b/registration.html
@@ -82,7 +82,7 @@
 
 <div class="container">
   <div class="image-container">
-    <img src="images/register.jpg" alt="Vision Image">
+    <img src="images/register.jpg" alt="Register Image">
   </div>
   <div class="form-container">
     <div class="card">
