--- a/rewards.html
+++ b/rewards.html
@@ -108,7 +108,7 @@
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/1.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/1.jpeg" alt="Duck Night Light" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -129,7 +129,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/2_fox.jpeg" alt="Cherry Blossom Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/2_fox.jpeg" alt="Fox Plushie" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -150,7 +150,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/3_penguinkeychain.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/3_penguinkeychain.jpeg" alt="Penguin Keychain" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -171,7 +171,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/5_bubblegun.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/5_bubblegun.jpeg" alt="Bubble Gun" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -192,7 +192,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/7_capybara.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/7_capybara.jpeg" alt="Capybara Soft Toy" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -213,7 +213,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/6_toycamera.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/6_toycamera.jpeg" alt="Toy Camera" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -234,7 +234,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/4_penguinkeychain.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/4_penguinkeychain.jpeg" alt="Penguin Keychain" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -255,7 +255,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/10_microscope.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/10_microscope.jpeg" alt="Toy Microscope" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -276,7 +276,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/8_frog.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/8_frog.jpeg" alt="Frog Plushie" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -297,7 +297,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/9_galaxylamp.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/9_galaxylamp.jpeg" alt="Galaxy Lamp" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -318,7 +318,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/11_wheeler.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/11_wheeler.jpeg" alt="Boat Assembly Kit" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -339,7 +339,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/12_woodenpuzzle.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/12_woodenpuzzle.jpeg" alt="Wooden Interactive Fruits Puzzle" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -360,7 +360,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/13_ufo.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/13_ufo.jpeg" alt="UFO Frisbee Ball" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -381,7 +381,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/14_fidgettoy.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/14_fidgettoy.jpeg" alt="Fidget Toy" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -402,7 +402,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/15_waterbook.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/15_waterbook.jpeg" alt="Water Coloring Book" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -423,7 +423,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/rewards/16_coloring.jpeg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/rewards/16_coloring.jpeg" alt="Coloring Book" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
