--- a/rewards_ducknightlight.html
+++ b/rewards_ducknightlight.html
@@ -108,18 +108,18 @@
         <!-- Image gallery -->
         <div class="mx-auto mt-6 max-w-2xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:gap-x-8 lg:px-8">
             <div class="aspect-h-4 aspect-w-3 hidden overflow-hidden rounded-lg lg:block">
-            <img src="images/rewards/1.jpeg" alt="Two each of gray, white, and black shirts laying flat." class="h-full w-full object-cover object-center">
+            <img src="images/rewards/1.jpeg" alt="Duck Night light">
             </div>
             <div class="hidden lg:grid lg:grid-cols-1 lg:gap-y-8">
             <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
-                <img src="images/rewards/1_2.jpeg" alt="Model wearing plain black basic tee." class="h-full w-full object-cover object-center">
+                <img src="images/rewards/1_2.jpeg" alt="Duck Night light">
             </div>
             <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
-                <img src="images/rewards/1_3.jpeg" alt="Model wearing plain gray basic tee." class="h-full w-full object-cover object-center">
+                <img src="images/rewards/1_3.jpeg" alt="Duck Night light">
             </div>
             </div>
             <div class="aspect-h-5 aspect-w-4 lg:aspect-h-4 lg:aspect-w-3 sm:overflow-hidden sm:rounded-lg">
-            <img src="images/rewards/1_6.png" alt="Model wearing plain white basic tee." class="h-full w-full object-cover object-center">
+            <img src="images/rewards/1_6.png" alt="Duck Night light">
             </div>
         </div>
     
