--- a/shop.html
+++ b/shop.html
@@ -113,7 +113,7 @@
                     <div class="group relative">
                         <div class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
                             <a href="shop_origami.html">
-                                <img src="images/shop/origami_paper_icon.jpeg" alt="Desk with leather desk pad, walnut desk organizer, wireless keyboard and mouse, and porcelain mug." class="h-full w-full object-cover object-center">
+                                <img src="images/shop/origami_paper_icon.jpeg" alt="Origami Paper" class="h-full w-full object-cover object-center">
                             </a>
                         </div>
                         <h3 class="mt-6 text-sm text-gray-500">
@@ -123,7 +123,7 @@
                     <div class="group relative">
                         <div class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
                             <a href="#">
-                                <img src="images/shop/tools_icon.jpeg" alt="Wood table with porcelain mug, leather journal, brass pen, leather key ring, and a houseplant." class="h-full w-full object-cover object-center">
+                                <img src="images/shop/tools_icon.jpeg" alt="Tools" class="h-full w-full object-cover object-center">
                             </a>
                         </div>
                         <h3 class="mt-6 text-sm text-gray-500">
@@ -133,7 +133,7 @@
                     <div class="group relative">
                         <div class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
                             <a href="#">
-                                <img src="images/shop/origami_book_icon.webp" alt="Collection of four insulated travel bottles on wooden shelf." class="h-full w-full object-cover object-center">
+                                <img src="images/shop/origami_book_icon.webp" alt="Origami Books" class="h-full w-full object-cover object-center">
                             </a>
                         </div>
                         <h3 class="mt-6 text-sm text-gray-500">
@@ -155,7 +155,7 @@
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/3_book.jpg" alt="Origami Animal Boxes Kit" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -171,7 +171,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_paper.jpg" alt="Cherry Blossom Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_paper.jpg" alt="Cherry Blossom Origami Paper 200PCs" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -187,7 +187,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_glue.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_glue.jpg" alt="Elmer's Purple Disappearing Glue 12 Pack" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -203,7 +203,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_scissor.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_scissor.jpg" alt="Asthon & Wright Children's Scissors Pack of 2" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -219,7 +219,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_paper.jpg" alt="Japanese Washi Origami Paper 300PCs" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -235,7 +235,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_glue.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_glue.jpg" alt="Elmer's Extra Strength Glue Stick Pack of 4" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -251,7 +251,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_book.jpg" alt="Origami for Kids Book" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -267,7 +267,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/3_paper.jpg" alt="Flower Pattern Origami Paper 500PCs" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -283,7 +283,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_glue.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/4_glue.jpg" alt="Elmer's Glitter Liquid" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -299,7 +299,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/4_paper.jpg" alt="Chiyogami Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -331,7 +331,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/5_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/5_paper.jpg" alt="Kimono Pattern Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -347,7 +347,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_scissor.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/3_scissor.jpg" alt="Scotch Kid's Scissors" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -363,7 +363,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/6_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/6_paper.jpg" alt="Double-sided Color Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -379,7 +379,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_glue.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/3_glue.jpg" alt="Elmer's Clear Glue" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -395,7 +395,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_book.jpg" alt="Pokémon Origami: Fold Your Own Alola Region Pokémon" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
