--- a/shop2.html
+++ b/shop2.html
@@ -88,7 +88,7 @@
                     <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
                     <div class="group relative">
                         <div class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
-                        <img src="images/shop/origami_paper_icon.jpeg" alt="Desk with leather desk pad, walnut desk organizer, wireless keyboard and mouse, and porcelain mug." class="h-full w-full object-cover object-center">
+                        <img src="images/shop/origami_paper_icon.jpeg" alt="Origami Paper" class="h-full w-full object-cover object-center">
                         </div>
                         <h3 class="mt-6 text-sm text-gray-500">
                         <a href="shop_origami.html">
@@ -100,7 +100,7 @@
                     </div>
                     <div class="group relative">
                         <div class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
-                        <img src="images/shop/tools_icon.jpeg" alt="Wood table with porcelain mug, leather journal, brass pen, leather key ring, and a houseplant." class="h-full w-full object-cover object-center">
+                        <img src="images/shop/tools_icon.jpeg" alt="Tools" class="h-full w-full object-cover object-center">
                         </div>
                         <h3 class="mt-6 text-sm text-gray-500">
                         <a href="#">
@@ -112,12 +112,12 @@
                     </div>
                     <div class="group relative">
                         <div class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
-                        <img src="images/shop/origami_book_icon.webp" alt="Collection of four insulated travel bottles on wooden shelf." class="h-full w-full object-cover object-center">
+                        <img src="images/shop/origami_book_icon.webp" alt="Origami Books" class="h-full w-full object-cover object-center">
                         </div>
                         <h3 class="mt-6 text-sm text-gray-500">
                         <a href="#">
                             <span class="absolute inset-0"></span>
-                            Travel
+                            Books
                         </a>
                         </h3>
                         <p class="text-base font-semibold text-gray-900">Books</p>
@@ -137,7 +137,7 @@
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_box.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_box.jpg" alt="Origami Paper Storage Box" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -153,7 +153,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_eyes.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_eyes.jpg" alt="Googly Eyes 100PCs" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -169,7 +169,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_ruler.jpg" alt="Cherry Blossom Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_ruler.jpg" alt="Metallic Triangular Rule" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -185,7 +185,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/7_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/7_paper.jpg" alt="Galaxy Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -201,7 +201,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/6_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/6_book.jpg" alt="Easy Origami for Kids & Teens" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -217,7 +217,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_ruler.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_ruler.jpg" alt="Metal Ruler" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -233,7 +233,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/1_score.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/1_score.jpg" alt="Fold and Score tool" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -249,7 +249,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/5_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/5_book.jpg" alt="Origami Book for Kids" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -265,7 +265,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/8_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/8_paper.jpg" alt="Pure Blue Origami Set" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -281,7 +281,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_ruler.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/4_ruler.jpg" alt="Rainbow Ruler" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -297,7 +297,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/9_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/9_paper.jpg" alt="Double Sided Colorful Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -313,7 +313,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_ruler.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/3_ruler.jpg" alt="Plastic Ruler" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -329,7 +329,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_book.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/4_book.jpg" alt="Origami Instructional Book" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -345,7 +345,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_score.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_score.jpg" alt="Echohu Scoring and Folding Tool" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -361,7 +361,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_eyes.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_eyes.jpg" alt="Googly Eyes Fun Pack" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -377,7 +377,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/10_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/10_paper.jpg" alt="Origami Metallic Foil Paper Art" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
