--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				</dl>
 			  </div>
 			</div>
-			<img src="images/mascot/kokoro.png" alt="Product screenshot" class="w-[48rem] max-w-none rounded-xl sm:w-[57rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
+			<img src="images/mascot/kokoro.png" alt="Kokoro" class="w-[48rem] max-w-none rounded-xl sm:w-[57rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
 		  </div>
 		</div>
 	  </div>
