--- a/shop_origami.html
+++ b/shop_origami.html
@@ -134,7 +134,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/2_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/2_paper.jpg" alt="Japanese Washi Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -150,7 +150,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/3_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/3_paper.jpg" alt="Flower Pattern Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
